added footer and my pic

--- a/index.html
+++ b/index.html
@@ -34,8 +34,15 @@
             <div class="row">
                 <div class="col">
                     <h1>About Me</h1>
-                </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque tenetur molestias consectetur est beatae debitis dicta neque. Corrupti perferendis blanditiis harum provident ipsum qui dolorem doloremque, totam inventore dolore ad!</p>
+                <img src="pic2.JPG" alt="Smile Pic">
+                  </div>
             </div>
         </div>
+        <footer class="footer mt-auto py-3 bg-light text-center">
+            <div class="container">
+              <span class="text-muted">&copy;2020 Mario Reid</span>
+            </div>
+          </footer>
         </body>
 </html>
