linked all pages together and edited the about me section

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
               </button>
               <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <div class="navlinks">
-                    <a class="nav-link" aria-current="page" href="/contact.html">Contact</a>
-                    <a class="nav-link" href="/portfolio.html">Portfolio</a>
-                  <a class="nav-link" href="/">About</a>
+                    <a class="nav-link" aria-current="page" href="./contact.html">Contact</a>
+                    <a class="nav-link" href="./portfolio.html">Portfolio</a>
+                  <a class="nav-link" href="./index.html">About</a>
                 </li>
                 </ul>
               </div>
@@ -32,10 +32,10 @@
           </nav>
         <div class="container">
             <div class="row">
-                <div class="col">
+                <div class="background col-4">
                     <h1>About Me</h1>
+                    <img src="pic2.JPG" alt="Smile Pic">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque tenetur molestias consectetur est beatae debitis dicta neque. Corrupti perferendis blanditiis harum provident ipsum qui dolorem doloremque, totam inventore dolore ad!</p>
-                <img src="pic2.JPG" alt="Smile Pic">
                   </div>
             </div>
         </div>
