--- a/portfolio.html
+++ b/portfolio.html
@@ -21,9 +21,9 @@
               </button>
               <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <div class="navlinks">
-                    <a class="nav-link" aria-current="page" href="/contact.html">Contact</a>
-                    <a class="nav-link" href="/portfolio.html">Portfolio</a>
-                  <a class="nav-link" href="/">About</a>
+                    <a class="nav-link" aria-current="page" href="./contact.html">Contact</a>
+                    <a class="nav-link" href="./portfolio.html">Portfolio</a>
+                  <a class="nav-link" href="./index.html">About</a>
                 </li>
                 </ul>
               </div>
