--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
               </button>
               <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <div class="navlinks">
-                    <a class="nav-link" aria-current="page" href="./contact.html">Contact</a>
-                    <a class="nav-link" href="./portfolio.html">Portfolio</a>
                   <a class="nav-link" href="./index.html">About</a>
+                  <a class="nav-link" href="./portfolio.html">Portfolio</a>
+                  <a class="nav-link" aria-current="page" href="./contact.html">Contact</a>
                 </li>
                 </ul>
               </div>
@@ -35,7 +35,8 @@
                 <div class="background col-4">
                     <h1>About Me</h1>
                     <img src="pic2.JPG" alt="Smile Pic">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque tenetur molestias consectetur est beatae debitis dicta neque. Corrupti perferendis blanditiis harum provident ipsum qui dolorem doloremque, totam inventore dolore ad!</p>
+                    <p>Mario Reid is currently a student completing Georgia Tech's Bootcamp for Full Stack Web Development. With these new skills obtained, he hopes to start a new career in the tech field with a hunger to learn. He has an Associates Degree in Accounting from Chattahoochee Technical College received in 2016. He worked as Compliance Officer for the past 13 years with medical physicist in North Atlanta.</p>
+                    <p>He is a true family man spending most of his time with his wife and 1 year old son who love going to the parks and beach. </p>
                   </div>
             </div>
         </div>
