worked on contact and portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,23 +24,44 @@
                   <a class="nav-link" href="./index.html">About</a>
                   <a class="nav-link" href="./portfolio.html">Portfolio</a>
                   <a class="nav-link" aria-current="page" href="./contact.html">Contact</a>
-                </li>
-                </ul>
               </div>
               </div>
             </div>
           </nav>
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <h1>About Me</h1>
-                </div>
+          <div class ="container">
+            <div class ="row">
+              <div class ="col-12">
+                <div class="jumbotron bg-white">
+                <div class ="row">
+                  <div class ="col-12">
+                    <h1 class="display-4">Portfolio</h1>
+                    <hr class="my-4">
+                  </div>
             </div>
-        </div>
+          <div class = "row">
+            <div class="col-lg-6">
+              <img src="https://www.placecage.com/350/350" class ="img-thumbnail w-100" alt="Smile Pic">
+            </div>
+            <div class="col-lg-6">
+              <img src="https://www.placecage.com/350/350" class ="img-thumbnail w-100" alt="Smile Pic">
+            </div>
+            <div class ="row">
+              <div class ="col-lg-6">
+                <img src="https://www.placecage.com/350/350" class ="img-thumbnail w-100" alt="Smile Pic">
+              </div>
+              <div class ="col-lg-6">
+                <img src="https://www.placecage.com/350/350" class ="img-thumbnail w-100" alt="Smile Pic">
+              </div>
+            </div>
+            <div class ="row">
+              <div class ="col-lg-6">
+                <img src="https://www.placecage.com/350/350" class ="img-thumbnail w-100" alt="Smile Pic">
+              </div>
+        </body>
+
         <footer class="footer mt-auto py-3 bg-light text-center">
             <div class="container">
               <span class="text-muted">&copy;2020 Mario Reid</span>
             </div>
           </footer>
-        </body>
 </html>
