--- a/contact.html
+++ b/contact.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
+
 <html>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title></title>
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">    
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-        <link rel="stylesheet" href="style.css"/>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -24,23 +25,43 @@
                   <a class="nav-link" href="./index.html">About</a>
                   <a class="nav-link" href="./portfolio.html">Portfolio</a>
                   <a class="nav-link" aria-current="page" href="./contact.html">Contact</a>
-                </li>
-                </ul>
               </div>
               </div>
             </div>
           </nav>
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <h1>About Me</h1>
-                </div>
-            </div>
-        </div>
-        <footer class="footer mt-auto py-3 bg-light text-center">
-            <div class="container">
-              <span class="text-muted">&copy;2020 Mario Reid</span>
-            </div>
-          </footer>
-        </body>
+          <div class="container">
+             <div class="row mt-5">
+                 <div class="col-8">
+                    <div class="jumbotron bg-white">
+                        <div class="row mt-5">
+                            <div class="col-12">
+                                <h1 class="display-4">Contact</h1>
+                                <hr class="my-4">
+                            </div>
+                        </div>
+                        <div class ="row">
+                            <div class ="col-12">
+                                <form>
+                                    <div class="form-group">
+                                      <label for="exampleInputEmail1">Name</label>
+                                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                                    </div>
+                                    <div class="form-group">
+                                      <label for="exampleInputPassword1">Email</label>
+                                      <input type="email" class="form-control" id="exampleInputPassword1">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="exampleFormControlTextarea1">Message</label>
+                                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                                      </div>
+                                    <button type="submit" class="btn">Submit</button>
+                                  </form>
+                                </div>
+                            </div>
+                        </div>
+                      </div>
+                 </div>
+             </div> 
+          </div>
+    </body>
 </html>
