--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
             <div class="row">
                 <div class="background col-4">
                     <h1>About Me</h1>
-                    <img src="pic2.JPG" alt="Smile Pic">
-                    <p>Mario Reid is currently a student completing Georgia Tech's Bootcamp for Full Stack Web Development. With these new skills obtained, he hopes to start a new career in the tech field with a hunger to learn. He has an Associates Degree in Accounting from Chattahoochee Technical College received in 2016. He worked as Compliance Officer for the past 13 years with medical physicist in North Atlanta.</p>
-                    <p>He is a true family man spending most of his time with his wife and 1 year old son who love going to the parks and beach. </p>
+                    <hr class = "my-6">
+                    <img src="pic2.JPG" alt="Smile Pic" style="margin:3%">
+                    <p>Mario Reid is currently a student completing Georgia Tech's Bootcamp for Full Stack Web Development. With these new skills obtained, he hopes to start a new career in the tech field with a hunger to learn. He has an Associates Degree in Accounting from Chattahoochee Technical College received in 2016. He worked as Compliance Officer for the past 13 years with traveling medical physicist in North Atlanta.</p>
+                    <p>He is a true family man spending most of his time with his wife and 1 year old son who love going to the parks and beach. Keeping the passport updated, he is anxiously waiting for international air travel to start again so he can continue traveling and exploring different cultures.</p>
                   </div>
             </div>
         </div>
