--- a/contact.html
+++ b/contact.html
@@ -44,15 +44,15 @@
                                 <form>
                                     <div class="form-group">
                                       <label for="exampleInputEmail1">Name</label>
-                                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                                      <input placeholder="Name" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                                     </div>
                                     <div class="form-group">
                                       <label for="exampleInputPassword1">Email</label>
-                                      <input type="email" class="form-control" id="exampleInputPassword1">
+                                      <input placeholder="Email" type="email" class="form-control" id="exampleInputPassword1">
                                     </div>
                                     <div class="form-group">
                                         <label for="exampleFormControlTextarea1">Message</label>
-                                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                                        <textarea placeholder="Message" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                                       </div>
                                     <button type="submit" class="btn">Submit</button>
                                   </form>
@@ -64,4 +64,9 @@
              </div> 
           </div>
     </body>
+    <footer class="footer mt-auto py-3 bg-light text-center">
+      <div class="container">
+        <span class="text-muted">&copy;2020 Mario Reid</span>
+      </div>
+    </footer>
 </html>
