fixed layout for portfolio.html and started READme

--- a/portfolio.html
+++ b/portfolio.html
@@ -45,6 +45,8 @@
             <div class="col-lg-6">
               <img src="https://www.placecage.com/350/350" class ="img-thumbnail w-100" alt="Smile Pic">
             </div>
+          </div> 
+
             <div class ="row">
               <div class ="col-lg-6">
                 <img src="https://www.placecage.com/350/350" class ="img-thumbnail w-100" alt="Smile Pic">
@@ -53,12 +55,14 @@
                 <img src="https://www.placecage.com/350/350" class ="img-thumbnail w-100" alt="Smile Pic">
               </div>
             </div>
+
             <div class ="row">
               <div class ="col-lg-6">
                 <img src="https://www.placecage.com/350/350" class ="img-thumbnail w-100" alt="Smile Pic">
               </div>
+            </div>
         </body>
-
+        
         <footer class="footer mt-auto py-3 bg-light text-center">
             <div class="container">
               <span class="text-muted">&copy;2020 Mario Reid</span>
