--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
             <div class="myname">
-              <a class="navbar-brand" href="/">Mario Reid</a>
+              <a class="navbar-brand" href="./index.html">Mario Reid</a>
             </div>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
