--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Index</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">    
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -24,8 +24,6 @@
                   <a class="nav-link" href="./index.html">About</a>
                   <a class="nav-link" href="./portfolio.html">Portfolio</a>
                   <a class="nav-link" aria-current="page" href="./contact.html">Contact</a>
-                </li>
-                </ul>
               </div>
               </div>
             </div>
